PROJECT(pubsub)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-Wall -g -O2")
SET(CMAKE_CXX_FLAGS "-Wall -g -O2 -std=gnu++0x")

FILE(GLOB_RECURSE COM_LIST "common/*.cpp")
FILE(GLOB_RECURSE PUB_LIST "pub/*.cpp")
FILE(GLOB_RECURSE SUB_LIST "sub/*.cpp")

INCLUDE_DIRECTORIES("include")

ADD_EXECUTABLE(pub  ${PUB_LIST} ${COM_LIST})
TARGET_LINK_LIBRARIES(pub pthread)

ADD_EXECUTABLE(sub  ${SUB_LIST} ${COM_LIST})
TARGET_LINK_LIBRARIES(sub pthread)
